css/style.css
/*
* M Y - F O L T *
*/

/* FONT */
@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100:300,400,700');

/**
 * CSS Reset
**/
*,
*::before,
*::after { 
  margin: 0;
  padding: 0;
}

/**
 * GLOBAL STYLES
**/
html {
  width: 100%;
  height: 100%;
  overflow: hidden;

  font-size: 10px;
  font-family: 'Josefin Sans', sans-serif;
}

body {
  width: 100%;
  height: 100%;
  position: relative;
  overflow: hidden;
  
  text-align: center;
  background: #fff;
}

.clearfix::after {
  display: table;
  clear: both;
  content: "";
}


/**
 * GAME TITLE -- LANDING SCREEN --
**/
.game-landing-container { 
  /* Positioning */
  display: block;
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 99999;
  
  /* Styling */
  background: radial-gradient( #e0f5e9, #e1f5e8);
}

.game-landing-container > h1 {
  /* Positioning */
  display: none;
  
  /* Styling */
  font-size: 4rem;
  font-weight: 400;
  color: #fff;
}

.game-landing-container__title:first-child { 
  /* Positioning */
  margin-top: -10.4rem;
  padding-top: 50vh;
}

.game-landing-container__title {
  /* Animate with keyframe */
  animation: slideGameLogoUp 1s 1s forwards ease-out;
}

/* Logo animation keyframe */
@keyframes slideGameLogoUp {
  from { transform: translateY(0) }
  to { transform: translateY(-10.4rem) }
}

.landing-cell { 
  /* Positioning */
  display: inline-block;
  height: 4.5rem;
  width: 6.2rem;
  padding-top: 1.7rem;
}

.game-landing-container__menu {
  visibility: hidden;
  opacity: 0;
  animation: fadeMainMenuIn 1s 2s forwards ease-in;
}

/* Main menu keyframe */
@keyframes fadeMainMenuIn {
  from { 
    opacity: 0;
  }
  to { 
    opacity: 1;
    visibility: visible;
  }
}

.btn { 
  /* Positioning */
  border: none;
  padding: 1rem 4rem;

  /* Styling */
  font-size: 1.6rem;
  font-weight: 100;
  font-style: italic;
  text-transform: uppercase;
  outline: 0;
}

.btn.game-landing-container__menu--black {
  width: 12.8rem;
  color: #fff;
  background-color: #000;  
}

.btn.game-landing-container__menu--black:hover,
.btn.game-landing-container__menu--black:active {
  cursor: pointer;
  font-weight: 400;
 }


/**
 * LEVEL TITEL -- LOADING PAGE --
**/


.level-loading-container { 
  /* Positioning */
  display: none;
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 9999;

  /* Styling */
  background-color: #60c5d7;
}

.level-loading-container .level { 
  /* Positioning */
  width: 80vw;
  height: 28vh;
  margin-top: 30vh;
  margin-left: 10vw;
  border-top: 1px solid #fff;
  border-bottom: 1px solid #fff;
  padding-top: 14vh;
  
  /* Styling */
  font-size: 2rem;
  font-weight: 100;
  font-style: italic;
  color: #fff;
  text-transform: uppercase;
 }

.levelTarget {
  /* Positioning */
  display: inline-block;
  border-top: 1px solid #313644;
  margin-top: 2rem;
  
  /* Styling */
  font-size: 1.4rem;
  text-transform: none;
}

.levelTarget p:first-child { 
  /* Positioning */
  margin-top: 2rem;
}

.levelTarget p {    
  /* Styling */ 
  font-weight: 400;
  color: #313644;
}


/**
 * GAME SCREEN
**/
.game-container {
  /* Positioning */
  display: none;
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 99999;
}

.game-screen {
  /* Positioning */
  width: 100%;
  height: 100%;
  position: fixed;

  /* Styling */
  background-color: #e7e7e7;
 }

/* HEADER */
.game-header {
  /* Positioning */
  width: 100vw;
  height: 10vh;
  position: relative;

  /* Styling */
  background-color: #141413;
}

/* Arrow */
.arrow-up {
  /* Positioning */
  width: 0; 
  height: 0; 
  border-left: 0.625rem solid transparent;
  border-right: 0.625rem solid transparent;
  border-bottom: 0.625rem solid #e7e7e7;
  position: absolute;
  bottom: 0;
}

/* Next colors */
.next-colors { 
  /* Positioning */
  width: auto;
  float: left;
  margin-left: 4.0625vw;
}

.color-list {
  /* Positioning */
  width: 100%;
  height: 100%;

  /* Styling */
  list-style: none;
}

.preview-cell {
  /* Positioning */
  width: 4.489436619vh;
  height: 4.489436619vh;
  margin-right: 0.4rem;
  float: left;
}

/* Level achivement and target */
.level-goal { 
  /* Positioning */
  position: absolute;
  top: 33.0078125%;
  left: 31vw;

  /* Styling */
  font-size: 1.2rem;
  font-style: italic;
  color: #fff;
 }

.thin-line { 
  /* Positioning */
  margin-right: 0.8rem;
  margin-left: 1rem;
  
  /* Styling */
  font-size: 0.5rem;
  vertical-align: 16%;
}

/* Menu */
.back-to-menu { 
  /* Positioning */
  width: 4.92957746479vh;
  height: 4.92957746479vh;
  margin-right: 4.6875vw;
  float: right;

  /* Styling */
  background-color: #232322;
}

.back-to-menu > a:link,
.back-to-menu > a:visited,
.back-to-menu > a:hover,
.back-to-menu > a:active {
  /* Positioning */
  display: block;
  width: 4.92957746479vh;
  height: 4.92957746479vh;
  position: relative;

  /* Styling */
  font-size: 2rem;
  font-weight: 300;
  line-height: 3.6rem;
  text-decoration: none;
  color: #fff;
}

.back-to-menu > a > span { 
  /* Positioning */
  position: absolute;
 }


/**
* GAME BOARD
**/

/* BOARD */
.game-board-container {
  /* Positioning */
  padding-top: 6.161971831vh;
  position: fixed;
  
  /* Styling */
  background-color: #e7e5e7;
}

.board {
  /* Positioning */
  width: 96.875vw;
  height: 76.41vh;
  position: fixed;

  /* Styling */
  background-color: #fff;
}

.cell {
  /* Positioning */
  width: 19.375vw;
  height: 19.375vw;
  position: relative;
  float: left;
}

.current {
  /* Positioning */
  width: 12.5%;
  height: 12.5%;
  border-radius: 50%;
  border: 1px solid #fff;
  position: absolute;
  top: 42%;
  left: 42%;
}

.won,
.lost {
  /* Positioning */
  position: absolute;
  top: 0;
  left: 0;

  /* Styling */
  font-size: 2rem;
  line-height: 6.6rem; 
  color: #fff;
}

.blue { background-color: #60c5d7; }
.grey { background-color: #313644; }
.red { background-color: #f70030; }
.light-green { background-color: #416563; }


/**
 * GAME INFORMATION BUBBLE
**/
.info {
  /* Positioning */
  display:none; 
  height: auto;
  padding: 1rem;
  position: absolute;
  bottom: 80%;
  z-index: 999;
  
  /* Styling */
  font-size: 1.6rem;
  font-weight: 100;
  color: #fff;
  background-color: #000;
}

/* Increase font size for retina dispalay */
@media ( -webkit-min-device-pixel-ratio: 2 ), 
       ( min-resolution: 192dpi ) { 
  .info,
  .back-to-menu > a {
    font-weight: 400; 
  }
}

/* position the bubble horizontally on the left or right of the cell */
.info.left { left: 68%; }
.info.right { right: 68%; }

/* Arrow displayed at the bottom left corner of the bubble */
.info.left::before { 
  /* Positioning */
  display: block;
  width: 0;
  border-width: 0 0 2rem 4rem;
  position: absolute;
  right: 9rem;
  bottom: -2rem;
  z-index: 999;
  
  /* Content */
  content: "";

  /* Styling */
  border-style: solid;
  border-color: transparent #000;
}

.info.left::after {
  /* Positioning */
  display: block;
  width: 0;
  border-width: 0 0 2rem 1rem;
  position: absolute;
  right: 12rem;
  bottom: -2rem;
  z-index: 999;
  
  /* Content */
  content: "";

  /* Styling */
  border-style: solid;
  border-color: transparent #60c5d7;
}

/* Arrow displayed at the bottom right corner of the bubble */
.info.right::before { 
  /* Positioning */
  display: block;
  width: 0;
  border: 0;
  border-right-width: 3rem;
  border-bottom-width: 2rem;
  position: absolute;
  bottom: -2rem;
  right: 0rem;
  z-index: 999;
  
  /* Content */
  content: "";
  
  /* Styling */
  border-style: solid;
  border-color: transparent #000;
}

.info.right::after {
  /* Positioning */
  display: block;
  width: 0;
  border: 0;
  border-right-width: 1rem;
  border-bottom-width: 2rem;
  position: absolute;
  right: 0rem;
  bottom: -20px;
  z-index: 999;
  
  /* Content */
  content: "";
  
  /* Styling */
  border-style: solid;
  border-color: transparent #60c5d7;
}

/* Size of the first info bubble */
.info.first-info { 
  width: 10.8rem;
}

/* Size of the second info bubble */
.info.second-info { 
  width: 12rem;
}

/* Size of the third info bubble */
.info.third-info { 
  width: 12rem;
  top: -34%;
}

.info.left.third-info::before { right: 10rem; }
.info.left.third-info::after {right: 13rem; }

/* Size of the forth info bubble */
.info.fourth-info { 
  width: 12rem;
  height: 3rem;
  top: -15%;
}

.info.left.fourth-info::before { 
  /* Positioning */
  display: block;
  width: 0;
  height: 0;
  border: 0;
  border-left-width: 3rem;
  border-top-width: 2rem;
  position: absolute;
  top: -2rem;
  left: 0rem;

  /* Content */
  content: "";
  
  /* Styling */
  border-style: solid;
  border-color: transparent #000;
 }

.info.left.fourth-info::after {
  /* Positioning */
  display: block;
  width: 0;
  height: 0;
  border: 0;
  border-left-width: 1rem;
  border-top-width: 2rem;
  position: absolute;
  top: -20px;
  left: 0rem;
  
  /* Content */
  content: "";
  
  /* Styling */
  border-style: solid;
  border-color: transparent #e7e7e7;
 }

/* Size of the fifth info bubble */
.info.fifth-info { 
  width: 12rem;
}

/* Used to display the arrow in the info bubble with the right color */
.info.blue::after { border-color: transparent #60c5d7; }
.info.red::after { border-color: transparent #f70030; }
.info.grey::after { border-color: transparent #313644; }

/* Hide the audio tag */
audio { display: none; }

